--- a/index.html
+++ b/index.html
@@ -1,47 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="index.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
+  <script src="index.js" type="text/javascript" defer></script>
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <main id="main" class="row">
+    <div class="col-md-6 h-100 p-2 d-flex align-content-center flex-column" id="firstCol">
+      <h3 id="fColh2" class="mt-3 mb-4">Your Result</h2>
+        <div id="circle"
+          class="w-75 h-50 mx-auto text-center rounded-circle d-flex flex-column align-content-center justify-content-center">
+          <h2 id="fColh3_one" class="mb-0">76</h2>
+          of 100
+        </div>
+        <h3 id="fColh3_two" class="mt-3">Great</h3>
+        <p class="mx-auto w-75">You scored higher than 65% of the people who have taken these tests.</p>
+    </div>
+    <div class="col h-100 p-lg-4 p-md-2" id="secondCol">
+      <h4 id="sColh4" class="text-start">Summary</h4>
+      <div class="container my-4">
+        <div class="sColitems-reaction py-3 mb-3 rounded-4 row">
+          <span class="text-start col">
+            <img src="assets/images/icon-reaction.svg" alt="">
+            Reaction
+          </span>
+          <span class="col text-end">
+            <span class="bolden">80</span> / 100
+          </span>
+        </div>
+        <div class="sColitems-memory py-3 mb-3 rounded-4 row">
+          <span class="text-start col">
+            <img src="assets/images/icon-memory.svg" alt="">
+            Memory
+          </span>
+          <span class="col text-end">
+            <span class="bolden">92</span> / 100
+          </span>
+        </div>
+        <div class="sColitems-verbal py-3 mb-3 rounded-4 row">
+          <span class="text-start col">
+            <img src="assets/images/icon-verbal.svg" alt="">
+            Verbal
+          </span>
+          <span class="col text-end">
+            <span class="bolden">61</span> / 100
+          </span>
+        </div>
+        <div class="sColitems-visual py-3 mb-3 rounded-4 row">
+          <span class="text-start col">
+            <img src="assets/images/icon-visual.svg" alt="">
+            Visual
+          </span>
+          <span class="col text-end">
+            <span class="bolden">72</span> / 100
+          </span>
+        </div>
+      </div>
+      <button type="button" id="btn" class="btn btn-lg rounded-5 d-block w-75 mx-auto">Continue</button>
+    </div>
+  </main>
+  <div class="attribution fixed-bottom mb-3">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="kharlabban.github.io">Er-Carl Abban</a>.
   </div>
 </body>
+
 </html>
